# Nmap Changelog ($Id$); -*-text-*-

[NOT YET RELEASED]

o Nping, the packet generation program by Luis MartinGarcia, is now
  included in the Nmap distribution.

o [NSE] Added http-vmware-path-vuln.nse, a script that checks for a
  path-traversal vulnerability in VMWare (CVE-2009-3733). [Ron]

o [NSE] Added a new library for ASN.1 parsing and adapted the SNMP library to
  make use of it. Added 5 scripts that use the new libraries:
  - snmp-netstat shows listening and connected sockets
  - snmp-processes shows process information including name, pid, path and 
    parameters
  - snmp-win32-services shows the names of running Windows services
  - snmp-win32-shares shows the names and path of Windows shares
  - snmp-win32-software shows a list of installed Windows software
  - snmp-win32-users shows a list of local Windows users
  [Patrik]

o Qualified an assertion to allow zero-byte sends in Nsock. Without
  this, an NSE script could cause this assertion failure by doing
  socket:send(""):
    nmap: nsock_core.c:516: handle_write_result: Assertion `bytesleft > 0' failed.
  [David]

o Added a service probe for Logitech SqueezeCenter command line interface
  [Patrik]

o Improved PostgreSQL match lines by matching the line of the error to a
  specific version [Patrik].

o Added a mac_addr_next_hop member to the host tables used in NSE.
  [Michael Pattrick, kx].

o Removed the nmap_service.exe helper program for smb-psexec, as it
  was still being flagged by malware detection even after the
  bit-flipping in the next release. You can now download it from
  http://nmap.org/psexec/nmap_service.exe. (The script will remind you
  if it's not installed.)

o [NSE] Replaced incorrect try/catch statements in dns-service-discovery that 
  would attempt to close a non-existing socket

o [NSE] Added the script http-methods from Bernd Stroessenreuther.
  This script sends an HTTP OPTIONS request to get the methods